feat: Enhance website performance and user experience
- Preload images in index.html for faster loading.
- Add a new list icon SVG for better UI representation.
- Optimize Header component with logo preloading and improved animations.
- Update CarouselLayout to enhance card visibility and transitions.
- Refactor CounterLayout for better layout structure.
- Adjust MarqueeContainer for improved styling.
- Modify OurPride component for better alignment and spacing.
- Implement FAQ component with expandable answers and custom scrollbar.
- Add ProgramCard component with blinking effect on hover.
- Update HighlightedText component for dynamic font size handling.
- Revamp LetUsKnow component with improved arrow animations.
- Refactor HomeBanner for responsive text sizing.
- Create FAQdata.js for structured FAQ content.
- Clean up index.css by removing unused styles.
- Enhance ProgramOverview with hover effects on buttons and improved layout.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="preload"
+      as="image"
+      href="/logo_header.png"
+      fetchpriority="high"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="/HomePage_banner.png"
+      fetchpriority="high"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
       rel="stylesheet"
     />
