--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       href="/HomePage_banner.png"
       fetchpriority="high"
     />
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
       rel="stylesheet"
-    />
+    /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SIIC IIT Kanpur</title>
   </head>
