--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link
       rel="preload"
       as="image"
-      href="/logo_header.png"
+      href="Logos/logo_header.png"
       fetchpriority="high"
     />
     <link
